--- a/spring-boot-tools/spring-boot-maven-plugin/src/site/apt/usage.apt.vm
+++ b/spring-boot-tools/spring-boot-maven-plugin/src/site/apt/usage.apt.vm
@@ -101,7 +101,9 @@ mvn spring-boot:run
 
   The application is forked in a separate process. If you need to specify some JVM arguments
   (i.e. for debugging purposes), you can use the <<<jvmArguments>>> parameter, see
-  {{{./examples/run-debug.html}Debug the application}} for more details.
+  {{{./examples/run-debug.html}Debug the application}} for more details. As a convenience, the
+  profiles to enable are handed by a specific property (<<<profiles>>>), see
+  {{{./examples/run-profiles.html}Specify active profiles}} for more details.
 
   By default, any <<src/main/resources>> folder will be added to the application classpath
   when you run the application. This allows hot refreshing of resources which can be very
